2009-02-18  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.glade,
	* src/vinagre-tab.c: Improved the authentication dialog.

2009-02-16  Jonh Wendell  <jwendell@gnome.org>

	* configure.in: post-release bump version to 2.25.92

==================== 2.25.91 =======================

2009-02-13  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c (vinagre_tab_take_screenshot): Presents an error
	message if capture of screenshot fails.

2009-02-02  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.91

==================== 2.25.90 ======================

2009-01-30  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: Handle correctly --enable-avahi, Closes #569878.

2009-01-22  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-applet.c: Rewrite of the applet, now using GObject.
	Also, fix the icon on transparent panels, closes #568674.

2009-01-21  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.90

==================== 2.25.5 ======================

2009-01-12  Kjartan Maraas  <kmaraas@gnome.org>

	* data/vinagre.glade: Don't translate widget
	labels.

2009-01-05  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.5

==================== 2.25.4 ======================

2008-12-15  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: Depends on gtk-vnc 0.3.8
	* src/vinagre-tab.c: Let scaling work on composited screens.

2008-12-15  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c: Added minimize button to toolbar in fullscreen
	mode, closes #558596.
	* data/icons/hicolor_status_*view-minimize.png: New icons, by
	Vinicius Depizzol.

2008-12-15  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.4

==================== 2.25.3 ======================

2008-12-12  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-applet.c: Make applet use new bookmarks structure.

2008-12-11  Jonh Wendell <jwendell@gnome.org>
